feat added notifications component

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <body>
   <div id="app"></div>
   <div id="affix"></div>
+  <div id="notifications"></div>
   <script type="module" src="/src/app/main.ts"></script>
 </body>
 
