--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Factory</title>
+    <title><%- title %></title>
+    <%- meta %>
   </head>
 
   <body>
     <div id="app"></div>
     <div id="affix"></div>
     <div id="notifications"></div>
-    <script type="module" src="/src/app/main.ts"></script>
   </body>
 </html>
